fixed some issues on mobile view (slideshow, fixed nav)

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -269,7 +269,7 @@ button {
     }
     @media (max-width: 900px) {
       grid-template-columns: 1fr;
-      grid-template-rows: 35vh 65vh;
+      grid-template-rows: 35% 65%;
     }
     @media (max-width: 320px) {
       grid-template-rows: 20vh calc(80vh - 25px);
@@ -678,8 +678,6 @@ button {
     transition: transform 0.5s ease-in-out;
     @media (max-width: 900px) {
       grid-template-columns: 1fr;
-    }
-    @media (max-width: 320px) {
       height: 100vh;
       width: 100%;
       position: fixed;
@@ -771,7 +769,7 @@ button {
     display: grid;
     transform: translateX(200%);
     transition: transform 0.5s ease-in-out;
-    @media (max-width: 320px) {
+    @media (max-width: 900px) {
       width: 100%;
       height: 100vh;
       position: fixed;
@@ -797,7 +795,7 @@ button {
       overflow: hidden;
       object-fit: cover;
       transition: opacity 0.6s ease-in-out;
-      @media (max-width: 320px) {
+      @media (max-width: 900px) {
         height: auto;
         top: 50%;
         transform: translateY(-50%);
